<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:title="@string/ocpn_prefs_display_navigation_mode"
        android:key="prefs_navmode"
        android:defaultValue="0"
        android:entries="@array/navmodeListArray"
        android:entryValues="@array/navmodeListValues" />

    <CheckBoxPreference
        android:key="prefb_lookahead"
        android:title="@string/ocpn_prefs_display_lookahead_mode"
        android:summary="@string/ocpn_prefs_display_summary_nav_mode"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="prefb_quilt"
        android:title="@string/ocpn_prefs_display_enablequilt"
        android:summary="@string/ocpn_prefs_display_summary_quilt"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="prefb_showgrid"
        android:title="@string/ocpn_prefs_display_showgrid"
        android:summary="@string/ocpn_prefs_display_summary_grid"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="prefb_showoutlines"
        android:title="@string/ocpn_prefs_display_showoutlines"
        android:summary="@string/ocpn_prefs_display_summary_outlines"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="prefb_lockwp"
        android:title="@string/ocpn_prefs_display_lockwaypoints"
        android:summary="@string/ocpn_prefs_display_summary_lockwpt"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="prefb_confirmdelete"
        android:title="@string/ocpn_prefs_display_confirmdelete"
        android:summary="@string/ocpn_prefs_display_summary_confirmdelete"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="prefb_showdepthunits"
        android:title="@string/ocpn_prefs_display_showdepthunits"
        android:summary="@string/ocpn_prefs_display_summary_depthunits"
        android:defaultValue="false" />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="prefs_UIScaleFactor"
        android:title="@string/ocpn_prefs_display_uiscalefactor"
        android:summary="@string/ocpn_prefs_display_summary_uiscalefactor"
        android:defaultValue="50"
        android:max="100"/>

    <org.opencpn.opencpn.SeekBarPreference
        android:key="prefs_chartScaleFactor"
        android:title="@string/ocpn_prefs_display_chartscalefactor"
        android:summary="@string/ocpn_prefs_display_summary_chartscalefactor"
        android:defaultValue="50"
        android:max="100"/>

    <CheckBoxPreference
        android:key="prefb_noSleep"
        android:title="@string/ocpn_prefs_display_nosleep"
        android:summary="@string/ocpn_prefs_display_summary_nosleep"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="prefb_expertmode"
        android:title="@string/ocpn_prefs_display_expertmode"
        android:summary="@string/ocpn_prefs_display_summary_expertmode"
        android:defaultValue="false" />



</PreferenceScreen>
