<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBGeneralSettings"
        android:title="@string/ocpn_grib_display_head_general"
        android:summary="@string/ocpn_grib_display_head_summary_general">
    </header>

    <header
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBWindSettings"
        android:title="@string/ocpn_grib_display_head_wind"
        android:summary="@string/ocpn_grib_display_head_summary_wind">
    </header>

    <header
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBPressureSettings"
        android:title="@string/ocpn_grib_display_head_pressure"
        android:summary="@string/ocpn_grib_display_head_summary_pressure">
    </header>

    <header
        android:key="grib_pref_gust"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBGustSettings"
        android:title="@string/ocpn_grib_display_head_windgust"
        android:summary="@string/ocpn_grib_display_head_summary_windgust">
    </header>

    <header
        android:key="grib_pref_waves"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBWaveSettings"
        android:title="@string/ocpn_grib_display_head_waves"
        android:summary="@string/ocpn_grib_display_head_summary_waves">
    </header>

    <header
        android:key="grib_pref_current"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBCurrentSettings"
        android:title="@string/ocpn_grib_display_head_current"
        android:summary="@string/ocpn_grib_display_head_summary_current">
    </header>

    <header
        android:key="grib_pref_rainfall"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBRainfallSettings"
        android:title="@string/ocpn_grib_display_head_rain"
        android:summary="@string/ocpn_grib_display_head_summary_rain">
    </header>

    <header
        android:key="grib_pref_cloudcover"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBCloudSettings"
        android:title="@string/ocpn_grib_display_head_cloud"
        android:summary="@string/ocpn_grib_display_head_summary_cloud">
    </header>

    <header
        android:key="grib_pref_airtemp"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBAirtempSettings"
        android:title="@string/ocpn_grib_display_head_airtemp"
        android:summary="@string/ocpn_grib_display_head_summary_airtemp">
    </header>

    <header
        android:key="grib_pref_seatemp"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBSeatempSettings"
        android:title="@string/ocpn_grib_display_head_seatemp"
        android:summary="@string/ocpn_grib_display_head_summary_seatemp">
    </header>

    <header
        android:key="grib_pref_cape"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBCAPESettings"
        android:title="@string/ocpn_grib_display_head_cape"
        android:summary="@string/ocpn_grib_display_head_summary_cape">
    </header>

<!--
    <header
        android:key="grib_pref_altgeo"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBAltGeoSettings"
        android:title="Geopotential Altitude"
        android:summary="Set Geopotential Altitude Display Options">
    </header>

    <header
        android:key="grib_pref_rh"
        android:fragment="org.opencpn.OCPNGRIBDisplayPrefActivity$GRIBRelHumSettings"
        android:title="Relative Humidity"
        android:summary="Set Relative Humidity Display Options">
    </header>
-->

</preference-headers>


