<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="grib_prefb_WindBarbedArrows"
        android:title="@string/ocpn_grib_windbarbrarrows"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="grib_prefb_WindBarbedVisibility"
        android:title="@string/ocpn_grib_windbarbarrowsalways"
        android:defaultValue="false" />

    <ListPreference
        android:title="@string/ocpn_grib_windbarbcolor"
        android:key="grib_prefs_WindBarbedColors"
        android:defaultValue="0"
        android:entries="@array/GRIBwindBarbColor"
        android:entryValues="@array/GRIBwindBarbColorVal" />

    <SwitchPreference
        android:key="grib_prefb_WindBarbedArrowFixedSpacing"
        android:title="@string/ocpn_grib_windbarbspace"
        android:switchTextOff="@string/DEFAULT"
        android:switchTextOn="@string/CUSTOM"
        android:defaultValue="false"
        />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_WindBarbedArrowSpacing"
        android:title="@string/ocpn_grib_windbarbspacepix"
        android:defaultValue="50"
        android:max="100"
        />

    <CheckBoxPreference
        android:key="grib_prefb_WindNumbers"
        android:title="@string/ocpn_grib_windspeedvalues"
        android:defaultValue="false" />

    <ListPreference
        android:title="@string/ocpn_grib_windspeedunits"
        android:key="grib_prefs_WindUnits"
        android:defaultValue="0"
        android:entries="@array/GRIBSpeedUnits"
        android:entryValues="@array/GRIBSpeedUnitsVal" />

    <SwitchPreference
        android:key="grib_prefb_WindNumbersFixedSpacing"
        android:title="@string/ocpn_grib_windspeedspace"
        android:switchTextOff="@string/DEFAULT"
        android:switchTextOn="@string/CUSTOM"
        android:defaultValue="false"
        />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_WindNumbersSpacing"
        android:title="@string/ocpn_grib_windspeedspacepix"
        android:defaultValue="50"
        android:max="100"
        />

    <CheckBoxPreference
        android:key="grib_prefb_WindDisplayIsobars"
        android:title="@string/ocpn_grib_windspeediso"
        android:defaultValue="false" />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_WindIsoBarSpacing"
        android:title="@string/ocpn_grib_windspeedisospace"
        android:defaultValue="10"
        android:max="50"
        />

    <CheckBoxPreference
        android:key="grib_prefb_WindOverlayMap"
        android:title="@string/ocpn_grib_windspeedshowoverlay"
        android:defaultValue="false"
        />

    <ListPreference
        android:title="@string/ocpn_grib_windspeedoverlaycolor"
        android:key="grib_prefs_WindOverlayMapColors"
        android:defaultValue="1"
        android:entries="@array/GRIBOverlayColors"
        android:entryValues="@array/GRIBOverlayColorsVal" />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_OverlayTransparency"
        android:title="@string/ocpn_grib_overlaytrans"
        android:defaultValue="60"
        android:max="100"
        />

    <CheckBoxPreference
        android:key="grib_prefb_WindParticles"
        android:title="@string/ocpn_grib_showparticles"
        android:defaultValue="false"
        />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_WindParticleDensity"
        android:title="@string/ocpn_grib_particledensity"
        android:defaultValue="5"
        android:max="10"
        />



</PreferenceScreen>

