<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="grib_prefb_CurrentDirectionArrows"
        android:title="@string/ocpn_grib_currentdirarrows"
        android:summary=""
        android:defaultValue="true" />

    <SwitchPreference
        android:key="grib_prefb_CurrentDirectionArrowFixedSpacing"
        android:title="@string/ocpn_grib_currentdirarrowspace"
        android:switchTextOff="@string/DEFAULT"
        android:switchTextOn="@string/CUSTOM"
        android:defaultValue="false"
        />


    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_CurrentDirectionArrowSpacing"
        android:title="@string/ocpn_grib_currentdirarrowspacepix"
        android:summary=""
        android:defaultValue="50"
        android:max="100"
        />

    <CheckBoxPreference
        android:key="grib_prefb_CurrentNumbers"
        android:title="@string/ocpn_grib_currentspeedvalues"
        android:summary=""
        android:defaultValue="false" />

    <ListPreference
        android:title="@string/ocpn_grib_currentspeedunits"
        android:key="grib_prefs_CurrentUnits"
        android:defaultValue="0"
        android:entries="@array/GRIBCurrentSpeedUnits"
        android:entryValues="@array/GRIBCurrentSpeedUnitsVal" />

    <SwitchPreference
        android:key="grib_prefb_CurrentNumbersFixedSpacing"
        android:title="@string/ocpn_grib_currentspeedspace"
        android:switchTextOff="@string/DEFAULT"
        android:switchTextOn="@string/CUSTOM"
        android:defaultValue="false"
        />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_CurrentNumbersSpacing"
        android:title="@string/ocpn_grib_currentspeedspacepix"
        android:summary=""
        android:defaultValue="50"
        android:max="100"
        />

    <CheckBoxPreference
        android:key="grib_prefb_CurrentOverlayMap"
        android:title="@string/ocpn_grib_currentshowspeedoverlay"
        android:summary=""
        android:defaultValue="false" />

    <ListPreference
        android:title="@string/ocpn_grib_currentspeedoverlaycolor"
        android:key="grib_prefs_CurrentOverlayMapColors"
        android:defaultValue="6"
        android:entries="@array/GRIBOverlayColors"
        android:entryValues="@array/GRIBOverlayColorsVal" />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_OverlayTransparency"
        android:title="@string/ocpn_grib_overlaytrans"
        android:summary=""
        android:defaultValue="60"
        android:max="100"
        />

    <CheckBoxPreference
        android:key="grib_prefb_CurrentParticles"
        android:title="@string/ocpn_grib_showparticles"
        android:summary=""
        android:defaultValue="false" />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_CurrentParticleDensity"
        android:title="@string/ocpn_grib_particledensity"
        android:summary=""
        android:defaultValue="5"
        android:max="10"
        />



</PreferenceScreen>

