<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <org.opencpn.ChartFilesDialogPreference
        android:key="pref_ChartFiles"
        android:title="@string/ocpn_prefs_charts_files"
        android:summary="@string/ocpn_prefs_charts_summary_chartfiles"
        android:negativeButtonText ="@string/ocpn_prefs_charts_negative"
        android:positiveButtonText ="@string/ocpn_prefs_charts_positive" />

    <PreferenceScreen
        android:key="pref_s52Options"
        android:fragment="org.opencpn.OCPNSettingsActivity$ChartsVectorSettings"
        android:title="@string/ocpn_prefs_charts_vectorchartsettings"
        android:summary="@string/ocpn_prefs_charts_summary_vectorchartsettings">
    </PreferenceScreen>

 </PreferenceScreen>
