<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <CheckBoxPreference
        android:key="grib_prefb_CloudCoverNumbers"
        android:title="@string/ocpn_grib_cloudvalues"
        android:summary=""
        android:defaultValue="false" />

    <ListPreference
        android:title="@string/ocpn_grib_cloudunits"
        android:key="grib_prefs_CloudCoverUnits"
        android:defaultValue="0"
        android:entries="@array/GRIBPercentUnits"
        android:entryValues="@array/GRIBPercentUnitsVal" />

    <SwitchPreference
        android:key="grib_prefb_CloudCoverNumbersFixedSpacing"
        android:title="@string/ocpn_grib_cloudspace"
        android:switchTextOff="Default"
        android:switchTextOn="Custom"
        android:defaultValue="false"
        />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_CloudCoverNumbersSpacing"
        android:title="@string/ocpn_grib_cloudspacepix"
        android:summary=""
        android:defaultValue="50"
        android:max="100"
        />

    <CheckBoxPreference
        android:key="grib_prefb_CloudCoverOverlayMap"
        android:title="@string/ocpn_grib_cloudshowoverlay"
        android:summary=""
        android:defaultValue="false" />

    <ListPreference
        android:title="@string/ocpn_grib_cloudoverlaycolor"
        android:key="grib_prefs_CloudCoverOverlayMapColors"
        android:defaultValue="5"
        android:entries="@array/GRIBOverlayColors"
        android:entryValues="@array/GRIBOverlayColorsVal" />

    <org.opencpn.opencpn.SeekBarPreference
        android:key="grib_prefs_OverlayTransparency"
        android:title="@string/ocpn_grib_overlaytrans"
        android:summary=""
        android:defaultValue="60"
        android:max="100"
        />


</PreferenceScreen>

